--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,13 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     //recyclerview
     implementation "androidx.recyclerview:recyclerview:1.3.0"
+    //fragment
     implementation 'androidx.fragment:fragment-ktx:1.5.7'
+    //openai
+    implementation "com.aallam.openai:openai-client:3.2.4"
+    implementation"io.ktor:ktor-client-okhttp:2.1.3"
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
