--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation"io.ktor:ktor-client-okhttp:2.1.3"
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
